[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/combat/stats/unit_panel.gd" id="1"]

[node name="UnitPanel" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Portrait" type="TextureRect" parent="VBox/Header"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5
expand_mode = 1

[node name="Info" type="VBoxContainer" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="VBox/Header/Info"]
layout_mode = 2
text = "Unit"

[node name="Tags" type="Label" parent="VBox/Header/Info"]
layout_mode = 2
text = "Role â€¢ Traits"

[node name="Bars" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="StatsGrid" type="GridContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4
columns = 4

[node name="Footer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="DPSLabel" type="Label" parent="VBox/Footer"]
layout_mode = 2
text = "DPS (3s): 0"

[node name="CastsLabel" type="Label" parent="VBox/Footer"]
layout_mode = 2
text = "Casts: 0"

